# lidar_viewer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  main.cxx
.github/workflows/: cmake-single-platform.yml
dev/: CMakeLists.txt
dev/inc/: CustomBaudrateSetter.h  CygLidarD1.h  CygLidarFrame.h  SerialPort.h  StatusOr.h
dev/inc/lidar_viewer/dev/: BinaryFile.h  CustomBaudrateSetter.h  CygLidarD1.h  CygLidarFrame.h  FrameWriter.h  IoStream.h  IoStreamBase.h  PointCloudReader.h  SerialPort.h  StatusOr.h
dev/src/: BinaryFile.cxx  CustomBaudrateSetter.cxx  CygLidarD1.cxx  IoStream.cxx  SerialPort.cxx
geometry/: CMakeLists.txt
geometry/inc/lidar_viewer/geometry/functions/: DownSample.h  GetDepthImageToPointCloudProcessor.h  Utilities.h
geometry/inc/lidar_viewer/geometry/types/: Box.h  DepthFrameAttributes.h  Matrix.h  Octree.h  OctreeFromPointCloud.h  OctreeIterator.h  Point.h  PointCloud.h  ScreenRanges.h
geometry/src/: Dummy.cxx
tests/: CMakeLists.txt  UnitTest.cxx
tests/smoke/: CMakeLists.txt  SmokeTests.cxx
tests/units/: CMakeLists.txt  CygLidarD1Test.cxx  CyglidarFrameTest.cxx  StaturOrTest.cxx  UnitTest.cxx  ViewerTest.cxx
tests/units/dev/: BinaryFileTest.cxx  CygLidarD1Test.cxx  CyglidarFrameTest.cxx  FrameWriterTest.cxx  IoStreamTest.cxx  PointCloudProviderTest.cxx  StaturOrTest.cxx
tests/units/geometry/: BoxTest.cxx  DownSampleTest.cxx  GetDepthImageToPointCloudProcessorTest.cxx  OctreeFromPointCloudTest.cxx  OctreeIteratorTest.cxx  OctreeTest.cxx  PointTest.cxx  ScreenRangesTest.cxx  UtilitiesTest.cxx
tests/units/ui/: DisplayManagerTest.cxx  ViewerTest.cxx
tools/: build.sh  clang_format.sh  clean_build.sh  install_tools.sh  run_tests.sh
ui/: CMakeLists.txt
ui/common/: CMakeLists.txt
ui/common/inc/lidar_viewer/ui/display/: DisplayFlatDepthImage.h  DisplayManager.h  DisplayOctreeFromPointCloud.h  DisplayPointCloud.h  DisplayStatistics.h  DisplayTransformations.h
ui/common/inc/lidar_viewer/ui/drawing/: DrawingFunctions.h
ui/common/inc/lidar_viewer/ui/window/: ScreenParameters.h  ViewManager.h
ui/common/src/: DisplayFlatDepthImage.cxx  DisplayManager.cxx  DisplayOctreeFromPointCloud.cxx  DisplayPointCloud.cxx  DisplayStatistics.cxx  ViewManager.cxx
ui/gl2/: CMakeLists.txt
ui/gl2/inc/lidar_viewer/ui/display/gl2/: DisplayManagerGl.h
ui/gl2/inc/lidar_viewer/ui/drawing/gl2/: DrawCube.h  DrawPoint.h  DrawString.h
ui/gl2/inc/lidar_viewer/ui/window/gl2/: GetScreenParameters.h  ViewManagerGl.h
ui/gl2/src/: DisplayManagerGl.cxx  DrawString.cxx  GetScreenParameters.cxx  ViewManagerGl.cxx
ui/inc/: DisplayFunctions.h  Viewer.h
ui/inc/lidar_viewer/ui/: DisplayFlatDepthImage.h  DisplayFunctions.h  DisplayOctreeFromPointCloud.h  DisplayPointCloud.h  DisplayStatistics.h  DrawCube.h  DrawPoint.h  DrawString.h  Viewer.h
ui/src/: DisplayFlatDepthImage.cxx  DisplayFunctions.cxx  DisplayOctreeFromPointCloud.cxx  DisplayPointCloud.cxx  DisplayStatistics.cxx  DrawString.cxx  Viewer.cxx
viewer/: CMakeLists.txt  main.cxx
